@@ -1270,6 +1270,13 @@ Mon Jun 17 15:23:51 CEST 2002
 
 	- Fixed parser bug in pgc.l. Octal numbers in single quotes are now
 	  correctly handled.
+
+Tue Jun 18 15:13:15 CEST 2002
+
+        - Fixed parser bug concerning foreign keys.
+        - Synced preproc.y with gram.y.
+        - Synced pgc.l with scan.l.
+        - Synced keywords.c.
 	- Set ecpg version to 2.10.0.
 	- Set library version to 3.4.0.
 
